--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
-    "react-native-elements": "^0.19.1"
+    "react-native-elements": "^0.19.1",
+    "react-uid": "^2.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
