--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^31.0.2",
+    "expo": "31.0.2",
     "react": "16.5.0",
     "react-native": "0.57.0",
     "react-native-elements": "^0.19.1",
